# on-the-fly-resume

./: .gitignore  README.md  pyproject.toml  test.ipynb
on_the_fly_resume/: __init__.py  __main__.py  scripts.py
on_the_fly_resume/on_the_fly_resume.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
on_the_fly_resume/templates/: template.tex
resume_customizer/: __main__.py  resume_manager.py
resume_customizer/resume_customizer.egg-info/: PKG-INFO  SOURCES.txt
src/on_the_fly_resume.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: template.tex
