[project]
name = "on_the_fly_resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "pdflatex>=0.1.3",
    "poethepoet>=0.24.0",
]

[tool.poe.tasks]
build = { script = "on_the_fly_resume.scripts:compile_latex" }

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "on_the_fly_resume" }

[tool.setuptools.packages.find]
where = ["on_the_fly_resume"]
